Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11369

hsm: files are not dirtied when modified by someone else than their owner

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Upstream
    • 3
    • 9223372036854775807

      Assuming you have a mounted lustre file system at /mnt/lustre, and a running copytool for it, the next commands should reproduce the issue:

      [root] # useradd alice
      [root] # mkdir /mnt/lustre/alice
      [root] # chown alice: /mnt/lustre/alice
      [root] # su - alice
      [alice] $ touch /mnt/lustre/alice/file
      [alice] $ chmod o+w /mnt/lustre/alice/file
      [alice] $ exit
      logout
      [root] # lfs hsm_archive /mnt/lustre/alice/file
      [root] # lfs hsm_state /mnt/lustre/alice/file
      /mnt/lustre/alice/file: (0x00000009) exists archived, archive_id:1
      [root] # useradd bob
      [root] # su - bob
      [bob] $ echo "123" > /mnt/lustre/alice/file
      [bob] $ exit
      logout
      [root] # lfs hsm_state /mnt/lustre/alice/file
      /mnt/lustre/alice/file: (0x00000009) exists archived, archive_id:1
      [root] # dmesg | tail -n 2
      [  336.217465] LustreError: 11513:0:(mdt_reint.c:661:mdt_add_dirty_flag()) file attribute change error for [0x200000401:0x2:0x0]: -1
      [  336.225859] LustreError: 11520:0:(mdt_reint.c:661:mdt_add_dirty_flag()) file attribute change error for [0x200000401:0x2:0x0]: -1
      

            jhammond John Hammond
            cealustre CEA
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: